--- a/.github/workflows/tf_workflow_apply.yml
+++ b/.github/workflows/tf_workflow_apply.yml
@@ -1,8 +1,54 @@
-name: 'Terraform init - apply workflow'
+# tf_workflow_init_plan_apply.yml
+name: tf_workflow_init_plan_apply
 
 on:
   workflow_call:
     inputs:
+      #Runner
+      runner:
+        required: false
+        type: string
+        default: 'ubuntu-latest'
+
+      #Terraform Configuration
+      config_directory:
+        required: true
+        type: string
+
+      #Terraform Backend Type
+      backend_type:
+        required: true
+        type: string
+        description: 'Type of the backend to use. Valid values are "azure" and "s3".'
+
+      #Terraform Setup
+      terraform_version:
+        required: false
+        type: string
+        default: 1.8.2
+
+      terraform_wrapper:
+        required: false
+        type: boolean
+        default: false
+
+      #Terraform Providers
+      provider_azurerm:
+        required: false
+        type: boolean
+        default: false
+
+      provider_oci:
+        required: false
+        type: boolean
+        default: false
+
+      provider_github:
+        required: false
+        type: boolean
+        default: false
+
+      #Azure Backend
       azure_backend_snapshot:
         required: false
         type: boolean
@@ -11,108 +57,130 @@ on:
         required: false
         type: boolean
         default: true
-      config_directory:
-        required: true
-        type: string
-      terraform_version:
+
+      #S3 Backend
+      aws_region:
         required: false
         type: string
-        default: 1.8.2
-      terraform_wrapper:
+        default: 'eu-amsterdam-1'
+      aws_key:
+        required: false
+        type: string
+      aws_backend_skip_credentials_validation:
         required: false
         type: boolean
-        default: false
+        default: true
+      aws_backend_skip_region_validation:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_requesting_account_id:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_metadata_api_check:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_skip_s3_checksum:
+        required: false
+        type: boolean
+        default: true
+      aws_backend_use_path_style:
+        required: false
+        type: boolean
+        default: true
+
+      #GitHub Owner
       github_owner:
         required: true
         type: string
 
     secrets:
+      #Azure
       azure_tenant_id:
-        required: true
+        required: false
       azure_subscription_id:
-        required: true
+        required: false
       azure_client_id:
-        required: true
+        required: false
       azure_client_secret:
-        required: true
+        required: false
+
+      #Azure Backend
       azure_backend_resource_group:
-        required: true
+        required: false
       azure_backend_storage_account:
-        required: true
+        required: false
       azure_backend_storage_container:
-        required: true
+        required: false
       azure_backend_storage_key:
-        required: true
+        required: false
+
+      #Oracle Cloud
+      oci_tenancy:
+        required: false
+      oci_user:
+        required: false
+      oci_key:
+        required: false
+      oci_fingerprint:
+        required: false
+
+      #S3 Backend
+      aws_access_key:
+        required: false
+      aws_secret_key:
+        required: false
+
+      #GitHub PAT
       github_pat:
         required: true
 
 jobs:
   terraform_apply:
-    runs-on: ubuntu-latest
-    name: Plan Terraform Configuration
-    env:
-      ARM_TENANT_ID: ${{ secrets.azure_tenant_id }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.azure_subscription_id }}
-      ARM_CLIENT_ID: ${{ secrets.azure_client_id }}
-      ARM_CLIENT_SECRET: ${{ secrets.azure_client_secret }}
-      ARM_SNAPSHOT: ${{ inputs.azure_backend_snapshot}}
-      ARM_USE_AZUREAD: ${{ inputs.azure_backend_use_azuread }}
-      GITHUB_TOKEN: ${{ secrets.github_pat }}
-      GITHUB_OWNER: ${{ inputs.github_owner }}
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: ${{ inputs.terraform_version }}
-          terraform_wrapper: ${{ inputs.terraform_wrapper }}
-
-      - name: Login to Azure CLI
-        run: az login --service-principal --username ${{ secrets.azure_client_id }} --password ${{ secrets.azure_client_secret }} --tenant ${{ secrets.azure_tenant_id }}  
-
-      - name: Terraform Init
-        id: init
-        working-directory: ${{ inputs.config_directory }}
-        run: |
-          terraform init \
-            -backend-config="resource_group_name=${{ secrets.azure_backend_resource_group }}" \
-            -backend-config="storage_account_name=${{ secrets.azure_backend_storage_account }}" \
-            -backend-config="container_name=${{ secrets.azure_backend_storage_container }}" \
-            -backend-config="key=${{ secrets.azure_backend_storage_key }}"
-
-      - name: Terraform Apply
-        id: apply
-        working-directory: ${{ inputs.config_directory }}
-        continue-on-error: true
-        run: |
-          terraform apply -auto-approve -json | tee apply_output.json
-
-      # - name: Comment Apply Summary
-      #   if: always()
-      #   uses: actions/github-script@v7
-      #   with:
-      #     github-token: ${{ secrets.github_pat }}
-      #     script: |
-      #       const fs = require('fs');
-      #       const applyOutput = fs.readFileSync('${{ github.workspace }}/${{ inputs.config_directory }}/apply_output.json', 'utf8');
-      #       let summary = '';
-      #       try {
-      #         const applyResult = JSON.parse(applyOutput);
-      #         // You may need to write your own logic to create a summary from the JSON result
-      #         // Below is just an example and may not reflect the actual structure of Terraform's JSON output
-      #         summary = `Terraform Apply Summary:\n`;
-      #         summary += `Resources added: ${applyResult.resource_changes.filter(r => r.change.actions.includes('create')).length}\n`;
-      #         summary += `Resources changed: ${applyResult.resource_changes.filter(r => r.change.actions.includes('update')).length}\n`;
-      #         summary += `Resources destroyed: ${applyResult.resource_changes.filter(r => r.change.actions.includes('delete')).length}\n`;
-      #       } catch (error) {
-      #         summary = `Error parsing Terraform apply output: ${error.message}`;
-      #       }
-      #       github.rest.issues.createComment({
-      #         issue_number: context.issue.number,
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         body: summary
-      #       });
+    uses:  ./.github/workflows/tf_step_apply.yml
+    with:
+      runner: ${{ inputs.runner }}
+      config_directory: ${{ inputs.config_directory }}
+      backend_type: ${{ inputs.backend_type }}
+      github_owner: ${{ inputs.github_owner }}
+      terraform_version: ${{ inputs.terraform_version }}
+      terraform_wrapper: ${{ inputs.terraform_wrapper }}
+      #Terraform Providers
+      provider_azurerm: ${{ inputs.provider_azurerm }}
+      provider_oci: ${{ inputs.provider_oci }}
+      provider_github: ${{ inputs.provider_github }}
+      #Azure Backend
+      azure_backend_snapshot: ${{ inputs.azure_backend_snapshot }}
+      azure_backend_use_azuread: ${{ inputs.azure_backend_use_azuread }}
+      #S3 Backend
+      aws_region: ${{ inputs.aws_region }}
+      aws_key: ${{ inputs.aws_key }}
+      aws_backend_skip_credentials_validation: ${{ inputs.aws_backend_skip_credentials_validation }}
+      aws_backend_skip_region_validation: ${{ inputs.aws_backend_skip_region_validation }}
+      aws_backend_skip_requesting_account_id: ${{ inputs.aws_backend_skip_requesting_account_id }}
+      aws_backend_skip_metadata_api_check: ${{ inputs.aws_backend_skip_metadata_api_check }}
+      aws_backend_skip_s3_checksum: ${{ inputs.aws_backend_skip_s3_checksum }}
+      aws_backend_use_path_style: ${{ inputs.aws_backend_use_path_style }}
+    secrets:
+      #Azure
+      azure_tenant_id: ${{ secrets.azure_tenant_id }}
+      azure_subscription_id: ${{ secrets.azure_subscription_id }}
+      azure_client_id: ${{ secrets.azure_client_id }}
+      azure_client_secret: ${{ secrets.azure_client_secret }}
+      #Azure Backend
+      azure_backend_resource_group: ${{ secrets.azure_backend_resource_group }}
+      azure_backend_storage_account: ${{ secrets.azure_backend_storage_account }}
+      azure_backend_storage_container: ${{ secrets.azure_backend_storage_container }}
+      azure_backend_storage_key: ${{ secrets.azure_backend_storage_key }}
+      #Oracle Cloud
+      oci_tenancy: ${{ secrets.oci_tenancy }}
+      oci_user: ${{ secrets.oci_user }}
+      oci_key: ${{ secrets.oci_key }}
+      oci_fingerprint: ${{ secrets.oci_fingerprint }}
+      #S3 Backend
+      aws_access_key: ${{ secrets.aws_access_key }}
+      aws_secret_key: ${{ secrets.aws_secret_key }}
+      #GitHub PAT
+      github_pat: ${{ secrets.github_pat }}
