--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -98,6 +98,32 @@ on:
         type: boolean
         default: true
 
+      #PostGrest backend
+      pg_backend_host:
+        required: false
+        type: string
+      pg_backend_port:
+        required: false
+        type: string
+      pg_backend_database:
+        required: false
+        type: string
+      pg_backend_schema_name:
+        required: false
+        type: string
+      pg_backend_skip_schema_creation:
+        required: false
+        type: boolean
+        default: false
+      pg_backend_skip_table_creation:
+        required: false
+        type: boolean
+        default: false
+      pg_backend_skip_index_creation:
+        required: false
+        type: boolean
+        default: false
+
       #GitHub Owner
       github_owner:
         required: true
@@ -140,6 +166,12 @@ on:
       aws_secret_key:
         required: false
 
+      #PostGres Backend
+      pg_backend_username:
+        required: false
+      pg_backend_password:
+        required: false
+
       #GitHub PAT
       github_pat:
         required: true
@@ -179,6 +211,14 @@ jobs:
       aws_backend_skip_metadata_api_check: ${{ inputs.aws_backend_skip_metadata_api_check }}
       aws_backend_skip_s3_checksum: ${{ inputs.aws_backend_skip_s3_checksum }}
       aws_backend_use_path_style: ${{ inputs.aws_backend_use_path_style }}
+      #PostGres Backend
+      pg_backend_host: ${{ inputs.pg_backend_host }}
+      pg_backend_port: ${{ inputs.pg_backend_port }}
+      pg_backend_database: ${{ inputs.pg_backend_database }}
+      pg_backend_schema_name: ${{ inputs.pg_backend_schema_name }}
+      pg_backend_skip_schema_creation: ${{ inputs.pg_backend_skip_schema_creation }}
+      pg_backend_skip_table_creation: ${{ inputs.pg_backend_skip_table_creation }}
+      pg_backend_skip_index_creation: ${{ inputs.pg_backend_skip_index_creation }}
     secrets:
       #Azure
       azure_tenant_id: ${{ secrets.azure_tenant_id }}
@@ -198,6 +238,9 @@ jobs:
       #S3 Backend
       aws_access_key: ${{ secrets.aws_access_key }}
       aws_secret_key: ${{ secrets.aws_secret_key }}
+      #PostGres Backend
+      pg_backend_username: ${{ secrets.pg_backend_username }}
+      pg_backend_password: ${{ secrets.pg_backend_password }}
       #GitHub PAT
       github_pat: ${{ secrets.github_pat }}
 
