--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -108,7 +108,7 @@ on:
       pg_backend_database:
         required: false
         type: string
-      pg_backend_schema_name:
+      pg_backend_schema:
         required: false
         type: string
       pg_backend_skip_schema_creation:
@@ -215,7 +215,7 @@ jobs:
       pg_backend_host: ${{ inputs.pg_backend_host }}
       pg_backend_port: ${{ inputs.pg_backend_port }}
       pg_backend_database: ${{ inputs.pg_backend_database }}
-      pg_backend_schema_name: ${{ inputs.pg_backend_schema_name }}
+      pg_backend_schema: ${{ inputs.pg_backend_schema }}
       pg_backend_skip_schema_creation: ${{ inputs.pg_backend_skip_schema_creation }}
       pg_backend_skip_table_creation: ${{ inputs.pg_backend_skip_table_creation }}
       pg_backend_skip_index_creation: ${{ inputs.pg_backend_skip_index_creation }}
