--- a/.github/workflows/tf_step_plan.yml
+++ b/.github/workflows/tf_step_plan.yml
@@ -93,15 +93,15 @@ on:
         default: true
 
       #PostGres Backend
-      pg_backend_host:
-        required: false
-        type: string
-      pg_backend_port:
-        required: false
-        type: string
-      pg_backend_database:
-        required: false
-        type: string
+      # pg_backend_host:
+      #   required: false
+      #   type: string
+      # pg_backend_port:
+      #   required: false
+      #   type: string
+      # pg_backend_database:
+      #   required: false
+      #   type: string
       pg_backend_schema:
         required: false
         type: string
@@ -161,6 +161,8 @@ on:
         required: false
 
       #PostGres Backend
+      pg_backend_connection_string:
+        required: false
       pg_backend_username:
         required: false
       pg_backend_password:
@@ -214,11 +216,9 @@ jobs:
       - name: Set PostGres environment variables
         if: inputs.backend_type == 'pg'
         run: |
-          echo "PG_HOST=${{ inputs.pg_backend_host }}" >> $GITHUB_ENV
-          echo "PG_PORT=${{ inputs.pg_backend_port }}" >> $GITHUB_ENV
           echo "PG_USER=${{ secrets.pg_backend_username }}" >> $GITHUB_ENV
           echo "PG_PASSWORD=${{ secrets.pg_backend_password }}" >> $GITHUB_ENV
-          echo "PG_DBNAME=${{ inputs.pg_backend_database }}" >> $GITHUB_ENV
+          echo "PG_CONN_STR=${{ secrets.pg_backend_connection_string }}" >> $GITHUB_ENV
 
       - name: Set GitHub environment variables
         run: |
