--- a/.github/workflows/tf_workflow_plan_apply.yml
+++ b/.github/workflows/tf_workflow_plan_apply.yml
@@ -241,9 +241,9 @@ jobs:
       aws_access_key: ${{ secrets.aws_access_key }}
       aws_secret_key: ${{ secrets.aws_secret_key }}
       #PostGres Backend
-      pg_backend_connection_string: ${{ secrets.pg_backend_connection_string}}
-      pg_backend_username: ${{ secrets.pg_backend_username }}
-      pg_backend_password: ${{ secrets.pg_backend_password }}
+      pg_backend_connection_string: '${{ secrets.pg_backend_connection_string}}'
+      pg_backend_username: '${{ secrets.pg_backend_username }}'
+      pg_backend_password: '${{ secrets.pg_backend_password }}'
       #GitHub PAT
       github_pat: ${{ secrets.github_pat }}
 
