--- a/.github/workflows/tf_step_plan.yml
+++ b/.github/workflows/tf_step_plan.yml
@@ -161,8 +161,8 @@ on:
         required: false
 
       #PostGres Backend
-      pg_backend_connection_string:
-        required: false
+      # pg_backend_connection_string:
+      #   required: false
       pg_backend_username:
         required: false
       pg_backend_password:
@@ -218,7 +218,6 @@ jobs:
         run: |
           echo "PGUSER=${{ secrets.pg_backend_username }}" >> $GITHUB_ENV
           echo "PGPASSWORD=${{ secrets.pg_backend_password }}" >> $GITHUB_ENV
-          echo "PG_CONN_STR=${{ secrets.pg_backend_connection_string }}" >> $GITHUB_ENV
 
       - name: Set GitHub environment variables
         run: |
