--- a/.github/workflows/tf_step_plan.yml
+++ b/.github/workflows/tf_step_plan.yml
@@ -105,6 +105,7 @@ on:
       pg_backend_schema:
         required: false
         type: string
+        default: terraform_remote_state
       pg_backend_skip_schema_creation:
         required: false
         type: boolean
@@ -268,7 +269,7 @@ jobs:
         working-directory: ${{ inputs.config_directory }}
         run: |
           terraform init \
-            -backend-config="schema_name=${{ inputs.pg_backend_schema_name }}" \
+            -backend-config="schema_name=${{ inputs.pg_backend_schema }}" \
             -backend-config="skip_schema_creation=${{ inputs.pg_backend_skip_schema_creation }}" \
             -backend-config="skip_table_creation=${{ inputs.pg_backend_skip_table_creation }}" \
             -backend-config="skip_index_creation=${{ inputs.pg_backend_skip_index_creation }}" \
