--- a/.github/workflows/tf_step_apply.yml
+++ b/.github/workflows/tf_step_apply.yml
@@ -1,6 +1,5 @@
-# step_tf_apply.yml
-# tf_workflow_init_plan_apply.yml
-name: tf_workflow_init_plan_apply
+# tf_step_apply.yml
+name: tf_step_apply
 
 on:
   workflow_call:
@@ -134,6 +133,12 @@ on:
       aws_secret_key:
         required: false
 
+      #PostGres Backend
+      pg_backend_username:
+        required: false
+      pg_backend_password:
+        required: false
+
       #GitHub PAT
       github_pat:
         required: true
@@ -169,6 +174,12 @@ jobs:
           echo "AWS_REGION=${{ inputs.aws_region }}" >> $GITHUB_ENV
           echo "AWS_ACCESS_KEY_ID=${{ secrets.aws_access_key }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.aws_secret_key }}" >> $GITHUB_ENV
+
+      - name: Set PostGres environment variables
+        if: inputs.backend_type == 'pg'
+        run: |
+          echo "PGUSER=${{ secrets.pg_backend_username }}" >> $GITHUB_ENV
+          echo "PGPASSWORD=${{ secrets.pg_backend_password }}" >> $GITHUB_ENV
 
       - name: Set GitHub environment variables
         run: |
@@ -218,6 +229,17 @@ jobs:
             -backend-config="skip_metadata_api_check=${{ inputs.aws_backend_skip_metadata_api_check }}" \
             -backend-config="skip_s3_checksum=${{ inputs.aws_backend_skip_s3_checksum }}" \
             -backend-config="use_path_style=${{ inputs.aws_backend_use_path_style }}"
+
+      - name: Terraform Init with PostGres backend
+        if: inputs.backend_type == 'pg'
+        id: init_pg_backend
+        working-directory: ${{ inputs.config_directory }}
+        run: |
+          terraform init \
+          -backend-config="schema_name=${{ inputs.config_directory }}" \
+          -backend-config="skip_schema_creation=false" \
+          -backend-config="skip_table_creation=false" \
+          -backend-config="skip_index_creation=false"
 
       - name: Terraform Apply
         id: apply
